--- a/style.css
+++ b/style.css
@@ -7,12 +7,6 @@
 
 
 
-.move{
-    position: absolute;
-    scale: 0;
-    right: 0px;
-    transform: translateX(500px);
-}
 
 
 
@@ -95,13 +89,13 @@ button:hover{
     grid-template-columns: repeat(5,1fr);
     text-align: center;
     gap: 1rem;
+    cursor: pointer;
     
 }
 .front-card ul li{
     padding: 1rem;
     border-radius: 50%;
     transition: .3s;
-    /* color:  hsl(217, 12%, 63%);; */
 }
 .front-card ul li:hover{
     background-color:hsl(25, 97%, 53%);
