--- a/style.css
+++ b/style.css
@@ -92,11 +92,15 @@ button:hover{
     text-align: center;
     gap: 1rem;
     cursor: pointer;
+    
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 .front-card ul li{
     padding: 1rem;
     border-radius: 50%;
     transition: .3s;
+    
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 .front-card ul li:hover{
     background-color:hsl(25, 97%, 53%);
