--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ button:hover{
     justify-content: space-between;
 
     transition: .4s;
-
+  
     box-shadow: inset -20px -20px 50px 0px hsla(216, 12%, 8%, 0.457);
 }
 
@@ -83,6 +83,7 @@ button:hover{
    background-color:hsl(213, 19%, 25%) ;
    border-radius: 50%;
    padding: 1rem;
+   
 }
 
 
@@ -109,9 +110,14 @@ button:hover{
 
 
 
+.front-card{
+    animation: smooth2 .4s;
+}
+
 .thanks-card{
    text-align: center;
-
+   animation: smooth .4s;
+    display: none;
 }
 
 .rating-review{
@@ -140,4 +146,26 @@ button:hover{
 }
 
 
+.display{
+    display: flex;
+}
 
+
+
+@keyframes smooth {
+    from{
+        transform: translateX(100%);
+    }
+    to{
+        transform: translateY(0);
+    }
+}
+
+@keyframes smooth2 {
+    from{
+        transform: translateY(-100%);
+    }
+    to{
+        transform: translateY(0);
+    }
+}
